--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
 <div class="container">
-  <h1 style= "text-align:center;">Are you a super bowl baby?</h1>
-  <p>This is some text.</p> 
+  <h1 style= "text-align:center;">Are You a Super Bowl Baby?</h1>
+  <
 </div>
 
 </body>
