--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <div class="container">
   <h1 style= "text-align:center;">Are You a Super Bowl Baby?</h1>
-  <
+  <input type = text> Favorite Team  </input> </br> 
+  <input type = text> Birthday </input>
 </div>
 
 </body>
