--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-   <link rel="stylesheet" type="text/css" href="main.css">
+   <link rel="stylesheet" type="text/css" href="public/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
@@ -13,7 +14,11 @@
 
 <div class="container">
   <h1 style= "text-align:center;">Are You a Super Bowl Baby?</h1>
-  <input type = text> Favorite Team  </input> </br> 
+
+  <p>What's your parent's favorite team?</p>
+  <input type="text"/>
+
+  
   <input type = text> Birthday </input>
 </div>
 
