--- a/index.html
+++ b/index.html
@@ -13,13 +13,20 @@
 <body>
 
 <div class="container">
-  <h1 style= "text-align:center;">Are You a Super Bowl Baby?</h1>
+  <h1>Are You a Super Bowl Baby?</h1>
 
-  <p>What's your parent's favorite team?</p>
+
+  <div class="info-container">
+   <div class="column">
+  <label>What's your parent's favorite team? </label>
   <input type="text"/>
+</div>
+<div class="column">
+  <label>Birthday </label>
+  <input type = "text"/>
+</div>
+  </div>
 
-  
-  <input type = text> Birthday </input>
 </div>
 
 </body>
