--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
   <div class="info-container">
    <div class="column">
-  <label>What's your parent's favorite team? </label>
+  <label>What's your parent's favorite team? </label> </br>
   <input type="text"/>
 </div>
 <div class="column">
-  <label>Birthday </label>
+  <label>Birthday </label> </br>
   <input type = "text"/>
 </div>
   </div>
