--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 </div>
 <div class="column">
   <label>Birthday </label> </br>
-  <input type = "text"/>
+     <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md" maxlength="2" required="" id="birthMonth">
+          <input name="birth_day" placeholder="DD" type="number" min="01" max="31" class="form-control input-md" maxlength="2" required="" id="birthDay">
+          <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="2"  required="" id="birthYear">
 </div>
   </div>
 
