--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <link rel="stylesheet" type="text/css" href="public/main.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="public/birthday.js"></script>
 </head>
 <body>
 
