--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
   <div class="info-container">
    <div class="column">
   <label>What's your parent's favorite team? </label> </br>
-  <input type="text"/>
+  <div class="dropdown "  >
+  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Teams <span class="caret"></span></button>
+    <ul id ="drop" class="dropdown-menu">
+    
+    </ul>
+</div>
 </div>
 <div class="column">
   <label>Birthday </label> </br>
      <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md" maxlength="2" required="" id="birthMonth">
-          <input name="birth_day" placeholder="DD" type="number" min="01" max="31" class="form-control input-md" maxlength="2" required="" id="birthDay">
-          <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="2"  required="" id="birthYear">
+     <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="4"  required="" id="birthYear">
 </div>
   </div>
 
