--- a/index.html
+++ b/index.html
@@ -30,18 +30,24 @@
   <div class="info-container">
    <div class="column">
   <label>What's your parent's favorite team? </label> </br>
-  <div class="dropdown "  >
-  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Teams <span class="caret"></span></button>
-    <ul id ="drop" class="dropdown-menu">
-    
-    </ul>
-</div>
-</div>
+
+
+    <div class="btn-group "> <a href="#" class="btn btn-info">Teams</a>
+ <a href="#" class="btn-group btn btn-info dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><span class="caret"></span></a>
+
+            <ul id="drop" class="dropdown-menu" role="menu">
+              
+            </ul>
+        </div>
+    </div>
+
+
 <div class="column">
   <label>Birthday </label> </br>
      <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md" maxlength="2" required="" id="birthMonth">
      <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="4"  required="" id="birthYear">
 </div>
+  </div>
   </div>
 
 </div>
