--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
    <div class="column">
   <label>What's your parent's favorite team? </label> </br>
   <div class="dropdown "  >
-  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Teams <span class="caret"></span></button>
-    <ul id ="drop" class="dropdown-menu">
-    
-    </ul>
+  <select type="button" id="drop" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+    <option>Teams <span class="caret"></span></optoin>
+  </select>
 </div>
 </div>
 <div class="column">
