--- a/index.html
+++ b/index.html
@@ -35,10 +35,14 @@
             </div>
             <div class="column">
                <label>Birthday </label> </br>
-               <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md" maxlength="2" required="" id="birthMonth">
-               <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="4"  required="" id="birthYear">
+               <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md"required="" id="birthMonth">
+               <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md"   required="" id="birthYear">
             </div>
+            <div class = "find">
+          <button type="button" class="btn btn-info btn-lg ">Find Out</button>       </div>
          </div>
+
+
       </div>
       </div>
    </body>
