--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
            <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="4"  required="" id="birthYear">
         </div>
      </div>
+       <div class = "find">
+          <button type="button" id = "go" class="btn btn-info btn-lg ">Find Out</button>       </div>
+         </div>
   </div>
   <p id="footer">Made by <a href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a></p>
 </body>
