--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
   <div class="container vertical-center">
      <h1>Are You a Super Bowl Baby?</h1>
+     <img id="loader" src="public/ajax-loader.gif">
      <div class="info-container">
         <div class="column">
            <label>What's your parent's favorite team? </label> </br>
@@ -39,10 +40,10 @@
            <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="4"  required="" id="birthYear">
         </div>
        <div class = "find">
-          <button type="button" id="go" class="btn btn-info btn-lg">Find Out</button>       </div>
-               </div>
-
+          <button type="button" id="go" class="btn btn-info btn-lg">Find Out</button>
+       </div>        
       </div>
+  </div>
 
       
   <p id="footer">Made by <a href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a></p>
