--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <div class="column">
            <label>What's your parent's favorite team? </label> </br>
            <div class="dropdown "  >
-              <select type="button" id="drop" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+              <select type="button" class="team_select" id="drop" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                  <option>Teams <span class="caret"></span></option>
               </select>
            </div>
         </div>
         <div class="column">
            <label>Birthday </label> </br>
-           <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md" maxlength="2" required="" id="birthMonth">
-           <input name="birth_year" placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="4"  required="" id="birthYear">
+           <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md" maxlength="2" required="" id="month">
+           <input placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md" maxlength="4"  required="" id="year">
         </div>
        <div class = "find">
           <button type="button" id="go" class="btn btn-info btn-lg">Find Out</button>
-       </div>        
+       </div>
       </div>
   </div>
 
