--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
       </div>
   </div>
 
-      
-  <p id="footer">Made by <a href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a></p>
+      <p id="footer" class = "footer navbar-fixed-bottom"> Made by <a href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a></p>
 
 </body>
 </html>
