--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            <label>What's your parent's favorite team? </label> </br>
            <div class="dropdown "  >
               <select type="button" class="team_select" id="drop" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                 <option>Teams <span class="caret"></span></option>
+                 <option>Arizona Cardinals<span class="caret"></span></option>
               </select>
            </div>
         </div>
