--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
   <div class="container vertical-center">
      <h1>Are You a Super Bowl Baby?</h1>
      <img id="loader" src="public/ajax-loader.gif">
+
+     <div id="fb_baby">
+        <img src="public/football_baby.jpg">
+        <h3>Congrats! You're a football baby!</h3>
+        <h3>The <span id="team"></span> won in <span id="date"></span></h3>
+     </div>
+
+     <div id="not_fb_baby">
+        <h3>Unfortunately you're not a Superbowl baby :(</h3>
+     </div>
+
+
      <div class="info-container">
         <div class="column">
            <label>What's your parent's favorite team? </label> </br>
