--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
            <label>Birthday </label> </br>
            <input name="birth_month" placeholder="MM" type="number" min="01" max="12" class="form-control input-md date" maxlength="2" required="" id="month">
            <input placeholder="YYYY" type="number" min="1900" ="2015" class="form-control input-md date" maxlength="4"  required="" id="year">
+          <input placeholder="DD" type="number" min="1" ="30" class="form-control input-md date" maxlength="4"  required="" id="day">
         </div>
        <div class = "find">
           <button type="button" id="go" class="btn btn-info btn-lg">Find Out</button>
@@ -62,7 +63,7 @@
       </div>
   </div>
 
-      <p id="footer" class = "footer navbar-fixed-bottom"> Made by <a href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a></p>
+      <p id="footer" class = "footer"> Made by <a href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a></p>
 
 </body>
 </html>
