--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
      </div>
 
-     <div id="not_fb_baby">
+     <div class= "baby"id="not_fb_baby">
         <h3>Unfortunately you're not a Superbowl baby :(</h3>
      </div>
 
