--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
         <img class="baby" src="public/football_baby.jpg">
       </div>
       <div class="twocol">
-        <h3>Congrats! You're a football baby!</h3>
+        <h2>YES!</h2>
+        <h3> You're a football baby!</h3>
         <h3>The <span id="team"></span> won in <span id="date"></span></h3>
       </div>
 
      </div>
 
-     <div class= "baby"id="not_fb_baby">
+     <div  id="not_fb_baby">
         <h3>Unfortunately you're not a Superbowl baby :(</h3>
      </div>
 
