--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
         <img class="baby" src="public/football_baby.jpg">
       </div>
       <div class="twocol">
-        <h2>YES!</h2>
+        <h2 id = "yes">YES!</h2>
         <h3> You're a football baby!</h3>
         <h3>The <span id="team"></span> won in <span id="date"></span></h3>
+                <button type="button" class="btn btn-info btn-lg" id="try_again">Try Again</button>
+
       </div>
 
      </div>
 
      <div  id="not_fb_baby">
-        <h3>Unfortunately you're not a Superbowl baby :(</h3>
+        <h2 id = "no">AWW... </h2>
+        <h3>You're not a Superbowl baby :(</h3>
         <h3 id="not_reason"></h3>
         <button type="button" class="btn btn-info btn-lg" id="try_again">Try Again</button>
      </div>
