--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
         <h3>You're not a Superbowl baby 😩</h3>
         <h3 id="not_reason"></h3>
         <button type="button" class="btn btn-info btn-lg" class="try_again">Try Again</button>
-
-        <div class="fb-share-button" data-href="https://amiasuperbowlbaby.com" data-layout="button_count"></div>
      </div>
 
 
@@ -86,7 +84,10 @@
       </div>
   </div>
 
-    <p id="footer" class="footer navbar-fixed-bottom"> Made by <a target="_blank" href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a>. Inspired by the beautiful <a target="_blank" href="https://www.youtube.com/watch?v=9KqekigARfE">Super Bowl babies</a> commerical.</a></p>
+    <div class="footer navbar-fixed-bottom" style="text-align:center; margin-top: 10px;">
+      <div class="fb-share-button" data-href="https://amiasuperbowlbaby.com" data-layout="button_count"></div>
+      <p style="font-size:16px;">Made by <a target="_blank" href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a>. Inspired by the beautiful <a target="_blank" href="https://www.youtube.com/watch?v=9KqekigARfE">Super Bowl babies</a> commerical.</a></p>
+    </div>
 
 </body>
 </html>
