twitter/fb buttons

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Are You A Superbowl Baby</title>
+  <title>Are You A Superbowl Baby?</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,700' rel='stylesheet' type='text/css'>
@@ -86,6 +86,10 @@
 
     <div class="footer navbar-fixed-bottom" style="text-align:center; margin-top: 10px;">
       <div class="fb-share-button" data-href="https://amiasuperbowlbaby.com" data-layout="button_count"></div>
+
+      <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
       <p style="font-size:16px;">Made by <a target="_blank" href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a>. Inspired by the beautiful <a target="_blank" href="https://www.youtube.com/watch?v=9KqekigARfE">Super Bowl babies</a> commerical.</a></p>
     </div>
 
