--- a/index.html
+++ b/index.html
@@ -45,16 +45,12 @@
         <h2 id = "yes">YES!</h2>
         <h3> You're a football baby!</h3>
         <h3>The <span id="team"></span> won in <span id="date"></span></h3>
-                <button type="button" class="btn btn-info btn-lg" class="try_again">Try Again</button>
-              </br>
-                <div class="fb-share-button" data-href="https://amiasuperbowlbaby.com" data-layout="button_count"></div>
-
         <h3>Your birthday is <span id="num_diff"></span> days away from the Super Bowl. The average prengancy length is 280 days.</h3>
         <button type="button" class="btn btn-info btn-lg" id="try_again">Try Again</button>
       </div>
      </div>
 
-     <div  id="not_fb_baby">
+     <div id="not_fb_baby">
         <h2 id = "no">AWW... </h2>
         <h3>You're not a Superbowl baby 😩</h3>
         <h3 id="not_reason"></h3>
@@ -65,11 +61,16 @@
      <div class="info-container">
         <div class="column">
            <label>What is your parents' favorite team? </label> </br>
+           
            <div class="dropdown">
-              <select type="button" class="team_select" id="drop" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                 <option>Arizona Cardinals<span class="caret"></span></option>
-              </select>
-           </div>
+              <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropdown trigger
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dLabel">
+                ...
+              </ul>
+            </div>
         </div>
         <div class="column">
            <label>What's your birthday?</label> </br>
@@ -84,13 +85,13 @@
       </div>
   </div>
 
-    <div class="footer navbar-fixed-bottom" style="text-align:center; margin-top: 10px;">
+    <div class="footer navbar-fixed-bottom" style="text-align:center;">
       <div class="fb-share-button" data-href="https://amiasuperbowlbaby.com" data-layout="button_count"></div>
 
       <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
-      <p style="font-size:16px;">Made by <a target="_blank" href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a>. Inspired by the beautiful <a target="_blank" href="https://www.youtube.com/watch?v=9KqekigARfE">Super Bowl babies</a> commerical.</a></p>
+      <p style="margin-top: 5px; font-size:16px;">Made by <a target="_blank" href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a>. Inspired by the beautiful <a target="_blank" href="https://www.youtube.com/watch?v=9KqekigARfE">Super Bowl babies</a> commerical.</a></p>
     </div>
 
 </body>
