--- a/index.html
+++ b/index.html
@@ -62,15 +62,8 @@
         <div class="column">
            <label>What is your parents' favorite team? </label> </br>
            
-           <div class="dropdown">
-              <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown trigger
-                <span class="caret"></span>
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dLabel">
-                ...
-              </ul>
-            </div>
+           <select id="drop">
+           </select>
         </div>
         <div class="column">
            <label>What's your birthday?</label> </br>
