--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h3> You're a football baby!</h3>
         <h3>The <span id="team"></span> won in <span id="date"></span></h3>
         <h3>Your birthday is <span id="num_diff"></span> days away from the Super Bowl. The average prengancy length is 280 days.</h3>
-        <button type="button" class="btn btn-info btn-lg" class="try_again">Try Again</button>
+        <button type="button" class="btn btn-info btn-lg try_again">Try Again</button>
       </div>
      </div>
 
@@ -54,7 +54,7 @@
         <h2 id = "no">AWW... </h2>
         <h3>You're not a Superbowl baby 😩</h3>
         <h3 id="not_reason"></h3>
-        <button type="button" class="btn btn-info btn-lg" class="try_again">Try Again</button>
+        <button type="button" class="btn btn-info btn-lg try_again">Try Again</button>
      </div>
 
 
