--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
       </div>
       <div class="twocol">
         <h2 id = "yes">YES!</h2>
-        <h3> You're a football baby!</h3>
+        <h3> You're a Super Bowl baby!</h3>
         <h3>The <span id="team"></span> won in <span id="date"></span></h3>
-        <h3>Your birthday is <span id="num_diff"></span> days away from the Super Bowl. The average prengancy length is 280 days.</h3>
+        <h3>Your birthday is <span id="num_diff"></span> days away from the Super Bowl that year.</h3>
+        <h3>The average prengancy length is 280 days.</h3>
         <button type="button" class="btn btn-info btn-lg try_again">Try Again</button>
       </div>
      </div>
