--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <a href="https://twitter.com/share" class="twitter-share-button">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
-      <p style="margin-top: 5px; font-size:16px;">Made by <a target="_blank" href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a>. Inspired by the beautiful <a target="_blank" href="https://www.youtube.com/watch?v=9KqekigARfE">Super Bowl babies</a> commerical.</a></p>
+      <p style="margin-top: 5px; font-size:16px;">Made by <a target="_blank" href="http://mattheakis.com">Michael Mattheakis</a> and <a href="#">Peter Kaplan</a>. Inspired by the adorable <a target="_blank" href="https://www.youtube.com/watch?v=9KqekigARfE">Super Bowl babies</a> commerical.</a></p>
     </div>
 
 </body>
